--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "ethers": "^5.7.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
+    "md5": "^2.3.0",
+    "mongoose": "^7.4.1",
+    "mongoose-encryption": "^2.1.2",
     "path": "^0.12.7"
   }
 }
