--- a/package.json
+++ b/package.json
@@ -19,12 +19,18 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "crypto": "^1.0.1",
+    "dotenv": "^16.3.1",
     "ethers": "^5.7.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.1",
     "md5": "^2.3.0",
     "mongoose": "^7.4.1",
     "mongoose-encryption": "^2.1.2",
+    "mongoose-findorcreate": "^4.0.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local-mongoose": "^8.0.0",
     "path": "^0.12.7"
   }
 }
